# STAT-ARCHIVE

./: .gitignore  README.md  celery.conf  celery.py  db.sqlite3  manage.py  nginx.conf  pyproject.toml  redis-server.sh  server.sh  supervisor.conf
Authentication/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
Authentication/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_reset_token.py  0004_user_reset_token_expiration.py  0005_user_is_email_verified.py  0006_user_is_approved.py
Dashboard/: admin.py  apps.py  filters.py  models.py  signals.py  urls.py  utils.py  views.py
Dashboard/migrations/: 0001_initial.py  0002_alter_pastquestion_session.py  0002_rename_course_image_pastquestion_thumbnail_and_more.py  0003_alter_pastquestion_session.py  0003_rename_course_name_pastquestion_name_and_more.py  0004_alter_project_session.py  0004_rename_course_file_pastquestion_file_and_more.py  0005_project_type_textbook_type.py  0005_rename_course_title_pastquestion_course_code_and_more.py  0006_alter_pastquestion_type.py  0007_alter_pastquestion_course_file_and_more.py  0007_alter_pastquestion_type.py  0008_alter_pastquestion_type.py  0009_report.py  0010_report_resource_name.py  0011_alter_report_resource_name.py
Log/: apps.py  models.py
Log/migrations/: 0001_initial.py  0002_rename_logs_log.py
settings/: __init__.py  dev.py  prod.py
statArchive/: asgi.py  celery.py  db.sqlite3  settings.py  urls.py  wsgi.py
statArchive/settings/: dev.py  prod.py
templates/: 404.html  500.html  Bibliotheca.html  base.html  login.html  password_reset_error.html  register.html  verification_error.html
templates/Auth/: approve_user_notice_librarian.html  approve_user_notice_user.html  forgot_password.html  forgot_password_email.html  login.html  password_reset_error.html  register.html  report_resource_email.html  reset_password.html  (+3 more)
(+19 files in other folders)
