[tool.poetry]
name = "stat-archive"
version = "0.1.0"
description = ""
authors = ["Thoth <thoth2357@gmail.com>"]
readme = "README.md"
packages = [{include = "stat_archive"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
django-widget-tweaks = "^1.4.12"
celery = "^5.3.0"
django-celery-results = "^2.5.1"
ngrok = "^0.8.1"
uvicorn = "^0.22.0"
whitenoise = "^6.5.0"
imgkit = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
