[tool.poetry]
name = "stat-archive"
version = "0.1.0"
description = ""
authors = ["Thoth <thoth2357@gmail.com>"]
readme = "README.md"
packages = [{include = "stat_archive"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
django-widget-tweaks = "^1.4.12"
django-celery-results = "^2.5.1"
ngrok = "^0.8.1"
uvicorn = "^0.22.0"
whitenoise = "^6.5.0"
imgkit = "^1.2.3"
pdf2image = "^1.16.3"
django-filter = "^23.2"
django-crispy-forms = "^2.0"
python-dotenv = "^1.0.0"
celery = "^5.3.1"
#redis = "^4.6.0"
redis = "^4.6.0"



[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
